--- a/wiki/index.html
+++ b/wiki/index.html
@@ -153,8 +153,6 @@ Error message and password prompt
 
 <li>$:/_sq/Stories/divertTiddlerMacro</li>
 
-<li>$:/_sq/Stories/Story2HistoryList</li>
-
 <li>$:/_sq/Stories/Story2StoryList</li>
 
 <li>$:/.giffmex/.Stylesheet4Stroll</li>
@@ -511,9 +509,13 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Development-Algorithm--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Development-Network--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Development-OS--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Development-WorkExperience--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Development/Network-Virtualization--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Development/OS-Linux--118161433</li>
 
@@ -837,6 +839,8 @@ Error message and password prompt
 
 <li>musl</li>
 
+<li>Network</li>
+
 <li>networks</li>
 
 <li>Note</li>
@@ -882,6 +886,8 @@ Error message and password prompt
 <li>TiddlyWiki</li>
 
 <li>Troubleshooting</li>
+
+<li>Virtualization</li>
 
 <li>Welcome to Stroll</li>
 
@@ -969,382 +975,6 @@ Error message and password prompt
 
 
 </pre>
-</div>
-<div created="20200425131030296" current-tiddler="Help us" modified="20200625045559674" title="$:/_sq/Stories/Story2HistoryList" type="application/json">
-<pre>[
-    {
-        &quot;title&quot;: &quot;$:/config/Tiddlers/TitleLinks&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 249.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 183.515625,
-            &quot;right&quot;: 1413.515625,
-            &quot;bottom&quot;: 269.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 623.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 220.390625,
-            &quot;right&quot;: 1450.390625,
-            &quot;bottom&quot;: 643.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 319.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 245.53125,
-            &quot;right&quot;: 1475.53125,
-            &quot;bottom&quot;: 339.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 537.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 283.546875,
-            &quot;right&quot;: 1513.546875,
-            &quot;bottom&quot;: 557.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 297.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 326.734375,
-            &quot;right&quot;: 1556.734375,
-            &quot;bottom&quot;: 317.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/core/ui/SideBar/Open&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 337.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 161.8125,
-            &quot;right&quot;: 1391.8125,
-            &quot;bottom&quot;: 357.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/core/ui/SideBar/Open'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/core/ui/SideBar/Open&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;TiddlyBlink&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 1035.921875,
-            &quot;left&quot;: 1190,
-            &quot;width&quot;: 101.6875,
-            &quot;right&quot;: 1291.6875,
-            &quot;bottom&quot;: 1054.921875,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/.giffmex/Customize.TiddlyBlink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 735.625,
-            &quot;left&quot;: 107.5,
-            &quot;width&quot;: 145.171875,
-            &quot;right&quot;: 252.671875,
-            &quot;bottom&quot;: 755.625,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/.giffmex/meta/hack.tiddlyblink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 757.625,
-            &quot;left&quot;: 107.5,
-            &quot;width&quot;: 129.59375,
-            &quot;right&quot;: 237.09375,
-            &quot;bottom&quot;: 777.625,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;TiddlyBlink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 161.296875,
-            &quot;left&quot;: 221.953125,
-            &quot;width&quot;: 71.859375,
-            &quot;right&quot;: 293.8125,
-            &quot;bottom&quot;: 181.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;TiddlyBlink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 161.296875,
-            &quot;left&quot;: 221.953125,
-            &quot;width&quot;: 71.859375,
-            &quot;right&quot;: 293.8125,
-            &quot;bottom&quot;: 181.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;,
-        &quot;fromPageRect&quot;: {}
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories-overview'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories-overview'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 481.34375,
-            &quot;left&quot;: 2259,
-            &quot;width&quot;: 80.890625,
-            &quot;right&quot;: 2339.890625,
-            &quot;bottom&quot;: 500.34375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Plugin maker'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 296.84375,
-            &quot;left&quot;: 2259,
-            &quot;width&quot;: 41.453125,
-            &quot;right&quot;: 2300.453125,
-            &quot;bottom&quot;: 315.84375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 501.34375,
-            &quot;left&quot;: 2259,
-            &quot;width&quot;: 80.890625,
-            &quot;right&quot;: 2339.890625,
-            &quot;bottom&quot;: 520.34375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Plugin maker'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 360.171875,
-            &quot;left&quot;: 1245,
-            &quot;width&quot;: 182.21875,
-            &quot;right&quot;: 1427.21875,
-            &quot;bottom&quot;: 379.171875,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/config/Settings'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 360.171875,
-            &quot;left&quot;: 1245,
-            &quot;width&quot;: 182.21875,
-            &quot;right&quot;: 1427.21875,
-            &quot;bottom&quot;: 379.171875,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/config/Settings'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/plugins/sq/Stories&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 463.734375,
-            &quot;left&quot;: 2321.1875,
-            &quot;width&quot;: 476.734375,
-            &quot;right&quot;: 2797.921875,
-            &quot;bottom&quot;: 482.734375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Help us&quot;,
-        &quot;fromPageRect&quot;: {}
-    }
-]</pre>
 </div>
 <div bag="default" created="20170615140314952" list="" modified="20200625045559674" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
 <pre></pre>
@@ -17699,7 +17329,7 @@ exports.context = contextWidget;
 <div created="20200616155538724" modified="20200616155538724" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
 </div>
-<div created="20200624162006372" modified="20200624162008156" title="$:/state/tab-1528275152">
+<div created="20200624162006372" modified="20200625051740511" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
 <div created="20200418121928767" modified="20200625045645920" title="$:/state/tab-1749438307">
@@ -17708,11 +17338,11 @@ exports.context = contextWidget;
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
-<div created="20200418122101344" modified="20200625050113883" title="$:/state/tab/moresidebar-1850697562">
+<div created="20200418122101344" modified="20200625051515639" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20200418121835270" modified="20200625050110527" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200418121835270" modified="20200625051714622" title="$:/state/tab/sidebar--595412856">
+<pre>TableOfContents</pre>
 </div>
 <div created="20200504200956301" modified="20200625045453184" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -17732,10 +17362,16 @@ exports.context = contextWidget;
 <div created="20200625044710343" modified="20200625044712033" title="$:/state/toc/TableOfContents/Development-Algorithm--118161433">
 <pre>close</pre>
 </div>
+<div created="20200625051716578" modified="20200625051716578" title="$:/state/toc/TableOfContents/Development-Network--118161433">
+<pre>open</pre>
+</div>
 <div created="20200624161956789" modified="20200625044732605" title="$:/state/toc/TableOfContents/Development-OS--118161433">
 <pre>close</pre>
 </div>
 <div created="20200624102744943" modified="20200624160738124" title="$:/state/toc/TableOfContents/Development-WorkExperience--118161433">
+<pre>open</pre>
+</div>
+<div created="20200625051717805" modified="20200625051717805" title="$:/state/toc/TableOfContents/Development/Network-Virtualization--118161433">
 <pre>open</pre>
 </div>
 <div created="20200624162111260" modified="20200624162111260" title="$:/state/toc/TableOfContents/Development/OS-Linux--118161433">
@@ -17768,7 +17404,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200625044511526" list="[[graceful restart]] Development" modified="20200625050126651" title="$:/StoryList">
+<div created="20200625051522733" list="$:/ControlPanel core返回ip能连但running为false Network Virtualization Algorithm Computing [[calicao subnet not match the CIDR of a configured Calico IP Pool]] TableOfContents" modified="20200625051741691" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/core/ui/Buttons/delete $:/.giffmex/Buttons/more-tiddler-edit-actions $:/_sq/Stories/divertTiddlerEditMacro $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200625045444250" tags="$:/giffmex/bigeditarea" title="$:/tags/EditToolbar">
@@ -18803,8 +18439,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200625044818402" title="$:/temp/search">
-<pre>ci</pre>
+<div created="20200418122544376" modified="20200625051738531" title="$:/temp/search">
+<pre>autotag</pre>
 </div>
 <div created="20200616183644116" modified="20200616183644116" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -18967,7 +18603,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 来源：知乎
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。</pre>
 </div>
-<div created="20200622084843930" modified="20200623155503721" tags="debug" title="calicao subnet not match the CIDR of a configured Calico IP Pool" type="text/x-markdown">
+<div created="20200622084843930" modified="20200625051728607" tags="network Network Virtualization" title="calicao subnet not match the CIDR of a configured Calico IP Pool" type="text/x-markdown">
 <pre>[[Debug]]
 [[docker]]
 [[calico]]
@@ -19161,6 +18797,9 @@ switch a, b:
 <pre></pre>
 </div>
 <div created="20200617082955041" modified="20200617082955041" title="musl">
+<pre></pre>
+</div>
+<div created="20200625051548724" modified="20200625051603907" tags="Development" title="Network" type="text/x-markdown">
 <pre></pre>
 </div>
 <div created="20200617041105043" modified="20200617041105043" title="networks">
@@ -19390,6 +19029,9 @@ Here is a hack to help you switch back and forth between wide and narrow sidebar
 Now your 'Map' tab will have a dropdown at the top to change the columns/sidebar relationship between 'fluid-fixed' and 'fixed-fluid'.
 
 &lt;/span&gt;</pre>
+</div>
+<div created="20200625051608737" modified="20200625051638857" tags="Network" title="Virtualization">
+<pre>[[Network]]</pre>
 </div>
 <div bag="default" created="20200128030902225" list="$:/_sq/Stories-overview" modified="20200521174009380" revision="0" tags="$:/giffmex/tutorials" title="Welcome to Stroll" type="text/vnd.tiddlywiki">
 <pre>&lt;&lt;tabs &quot;[[A stroll through Stroll]] [[The TiddlyWiki layout]] [[Using tiddlers]] [[Linking in Stroll, part 1]] [[Linking in Stroll, part 2]] [[Linking in Stroll, part 3]] [[New tiddler linked here]] [[Two columns]] [[Advanced stuff]] [[Troubleshooting]] [[Stroll vs Roam]] [[Recent updates to Stroll]] [[Download Stroll]] [[Updating Stroll]] [[Add Stroll to your TW]] [[Get goodies]] [[Help / Acknowledgments]] [[Help us]]&quot; &quot;[[A stroll through Stroll]]&quot; &quot;$:/state/strollhometabs&quot; &quot;tc-vertical&quot;&gt;&gt;</pre>
