--- a/wiki/index.html
+++ b/wiki/index.html
@@ -237,6 +237,8 @@ Error message and password prompt
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all</li>
 
+<li>$:/config/Plugins/Disabled/$:/plugins/danielo515/autotag</li>
+
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/filesystem</li>
 
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/savetrail</li>
@@ -445,6 +447,8 @@ Error message and password prompt
 
 <li>$:/state/plugin-info--896887961-$:/plugins/sq/Stories---1130285312</li>
 
+<li>$:/state/plugin-info-1634970942-$:/plugins/danielo515/autotag---1503439084</li>
+
 <li>$:/state/plugin-info-334910430-$:/core---1812962263</li>
 
 <li>$:/state/refsection</li>
@@ -526,6 +530,20 @@ Error message and password prompt
 <li>$:/state/tree/$:/config/</li>
 
 <li>$:/state/tree/$:/config/markdown/</li>
+
+<li>$:/state/tree/$:/config/Plugins/</li>
+
+<li>$:/state/tree/$:/config/Plugins/Disabled/</li>
+
+<li>$:/state/tree/$:/config/Plugins/Disabled/$:/</li>
+
+<li>$:/state/tree/$:/config/Plugins/Disabled/$:/plugins/</li>
+
+<li>$:/state/tree/$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/</li>
+
+<li>$:/state/tree/$:/plugins/</li>
+
+<li>$:/state/tree/$:/plugins/danielo515/</li>
 
 <li>$:/status/IsAnonymous</li>
 
@@ -1553,6 +1571,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 </div>
 <div created="20200616155434955" modified="20200616155444398" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all">
 <pre>hide</pre>
+</div>
+<div created="20200625052047284" modified="20200625052047284" title="$:/config/Plugins/Disabled/$:/plugins/danielo515/autotag">
+<pre>yes</pre>
 </div>
 <div created="20200616155301110" modified="20200616155301110" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/filesystem">
 <pre>yes</pre>
@@ -17266,6 +17287,9 @@ exports.context = contextWidget;
 <div created="20200425181600201" modified="20200425181604513" title="$:/state/plugin-info--896887961-$:/plugins/sq/Stories---1130285312">
 <pre>settings</pre>
 </div>
+<div created="20200625052044683" modified="20200625052104051" title="$:/state/plugin-info-1634970942-$:/plugins/danielo515/autotag---1503439084">
+<pre>contents</pre>
+</div>
 <div created="20200521150848494" modified="20200521150848494" title="$:/state/plugin-info-334910430-$:/core---1812962263">
 <pre>contents</pre>
 </div>
@@ -17317,8 +17341,8 @@ exports.context = contextWidget;
 <div created="20200429214732957" modified="20200624162232241" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20200619183706276" modified="20200625045225767" title="$:/state/tab--959111941">
-<pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
+<div created="20200619183706276" modified="20200625051757709" title="$:/state/tab--959111941">
+<pre>$:/core/ui/ControlPanel/LoadedModules</pre>
 </div>
 <div created="20200423200356184" modified="20200423200356184" title="$:/state/tab-102244450">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
@@ -17326,23 +17350,23 @@ exports.context = contextWidget;
 <div created="20200418151636450" modified="20200421145858496" title="$:/state/tab-11433013">
 <pre>.topicList</pre>
 </div>
-<div created="20200616155538724" modified="20200616155538724" title="$:/state/tab-1163638994">
-<pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
+<div created="20200616155538724" modified="20200625051821012" title="$:/state/tab-1163638994">
+<pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200624162006372" modified="20200625051740511" title="$:/state/tab-1528275152">
-<pre>$:/core/ui/DefaultSearchResultList</pre>
+<div created="20200624162006372" modified="20200625051938451" title="$:/state/tab-1528275152">
+<pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
 </div>
-<div created="20200418121928767" modified="20200625045645920" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/KeyboardShortcuts</pre>
+<div created="20200418121928767" modified="20200625051756405" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200616144657561" modified="20200619185215770" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
-<div created="20200418122101344" modified="20200625051515639" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
+<div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200625051714622" title="$:/state/tab/sidebar--595412856">
-<pre>TableOfContents</pre>
+<div created="20200418121835270" modified="20200625051945063" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20200504200956301" modified="20200625045453184" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -17371,7 +17395,7 @@ exports.context = contextWidget;
 <div created="20200624102744943" modified="20200624160738124" title="$:/state/toc/TableOfContents/Development-WorkExperience--118161433">
 <pre>open</pre>
 </div>
-<div created="20200625051717805" modified="20200625051717805" title="$:/state/toc/TableOfContents/Development/Network-Virtualization--118161433">
+<div created="20200625051717805" modified="20200625051849987" title="$:/state/toc/TableOfContents/Development/Network-Virtualization--118161433">
 <pre>open</pre>
 </div>
 <div created="20200624162111260" modified="20200624162111260" title="$:/state/toc/TableOfContents/Development/OS-Linux--118161433">
@@ -17389,6 +17413,27 @@ exports.context = contextWidget;
 <div created="20200617031746930" modified="20200617031746930" title="$:/state/tree/$:/config/markdown/">
 <pre>show</pre>
 </div>
+<div created="20200625052007491" modified="20200625052020596" title="$:/state/tree/$:/config/Plugins/">
+<pre>hide</pre>
+</div>
+<div created="20200625052009503" modified="20200625052014881" title="$:/state/tree/$:/config/Plugins/Disabled/">
+<pre>hide</pre>
+</div>
+<div created="20200625052010609" modified="20200625052010609" title="$:/state/tree/$:/config/Plugins/Disabled/$:/">
+<pre>show</pre>
+</div>
+<div created="20200625052011722" modified="20200625052011722" title="$:/state/tree/$:/config/Plugins/Disabled/$:/plugins/">
+<pre>show</pre>
+</div>
+<div created="20200625052012737" modified="20200625052012737" title="$:/state/tree/$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/">
+<pre>show</pre>
+</div>
+<div created="20200625052033037" modified="20200625052033037" title="$:/state/tree/$:/plugins/">
+<pre>show</pre>
+</div>
+<div created="20200625052034655" modified="20200625052039346" title="$:/state/tree/$:/plugins/danielo515/">
+<pre>show</pre>
+</div>
 <div bag="default" revision="1" title="$:/status/IsAnonymous">
 <pre>yes</pre>
 </div>
@@ -17404,7 +17449,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200625051522733" list="$:/ControlPanel core返回ip能连但running为false Network Virtualization Algorithm Computing [[calicao subnet not match the CIDR of a configured Calico IP Pool]] TableOfContents" modified="20200625051741691" title="$:/StoryList">
+<div created="20200625051522733" list="$:/plugins/danielo515/autotag Network Virtualization [[calicao subnet not match the CIDR of a configured Calico IP Pool]]" modified="20200625052040049" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/core/ui/Buttons/delete $:/.giffmex/Buttons/more-tiddler-edit-actions $:/_sq/Stories/divertTiddlerEditMacro $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200625045444250" tags="$:/giffmex/bigeditarea" title="$:/tags/EditToolbar">
@@ -18439,8 +18484,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200625051738531" title="$:/temp/search">
-<pre>autotag</pre>
+<div created="20200418122544376" modified="20200625051936571" title="$:/temp/search">
+<pre>plugins/danielo515/autotag</pre>
 </div>
 <div created="20200616183644116" modified="20200616183644116" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -18603,7 +18648,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 来源：知乎
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。</pre>
 </div>
-<div created="20200622084843930" modified="20200625051728607" tags="network Network Virtualization" title="calicao subnet not match the CIDR of a configured Calico IP Pool" type="text/x-markdown">
+<div created="20200622084843930" modified="20200625052058999" tags="network Network Virtualization" title="calicao subnet not match the CIDR of a configured Calico IP Pool" type="text/x-markdown">
 <pre>[[Debug]]
 [[docker]]
 [[calico]]
