--- a/wiki/index.html
+++ b/wiki/index.html
@@ -423,6 +423,8 @@ Error message and password prompt
 
 <li>$:/state/folded/golang pitfall</li>
 
+<li>$:/state/folded/Signal experience</li>
+
 <li>$:/state/folded/Stroll layout cheat sheet</li>
 
 <li>$:/state/folded/Tiddler A</li>
@@ -532,6 +534,12 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents/Development-WorkExperience--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Development/Formal language-Golang--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Development/Formal language-Programming language--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Development/Formal language-Regular expression--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Development/Formal language/Programming language-Golang--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Development/Network-Virtualization--118161433</li>
 
@@ -845,6 +853,8 @@ Error message and password prompt
 
 <li>Formal language</li>
 
+<li>formal language</li>
+
 <li>goalng CI build 二进制/tmp/zero-redis: No such file or directory</li>
 
 <li>Golang</li>
@@ -897,9 +907,19 @@ Error message and password prompt
 
 <li>Pitfalls</li>
 
+<li>Positive lookbehind</li>
+
+<li>Programming language</li>
+
 <li>Quote</li>
 
 <li>Reentrancy</li>
+
+<li>regex</li>
+
+<li>Regular expression</li>
+
+<li>Regular Expression</li>
 
 <li>RenameTags</li>
 
@@ -11251,11 +11271,16 @@ NB: if you want no link, but at tooltip, use `&quot;&quot;` for a empty link.
 \end
 ```</pre>
 </div>
-<div status="complete" title="$:/Import">
-<pre>下列条目已被导入：
-
-# [[Untitled 1]]
-# [[$:/plugins/danielo515/autotag]]</pre>
+<div plugin-type="import" status="pending" title="$:/Import" type="application/json">
+<pre>{
+    &quot;tiddlers&quot;: {
+        &quot;Untitled&quot;: {
+            &quot;title&quot;: &quot;Untitled&quot;,
+            &quot;text&quot;: &quot;&lt;meta charset='utf-8'&gt;&lt;span style=\&quot;color: rgb(187, 0, 170); font-family: SFMono-Regular, Consolas, &amp;quot;Liberation Mono&amp;quot;, Menlo, Courier, monospace; font-size: 15px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: pre-wrap; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(238, 238, 238); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;\&quot;&gt;Positive lookbehind&lt;/span&gt;&quot;,
+            &quot;type&quot;: &quot;text/html&quot;
+        }
+    }
+}</pre>
 </div>
 <div bag="default" revision="0" title="$:/isEncrypted">
 <pre>no</pre>
@@ -17275,6 +17300,9 @@ exports.context = contextWidget;
 <div created="20200625045609344" modified="20200625045609344" title="$:/state/folded/golang pitfall">
 <pre>hide</pre>
 </div>
+<div created="20200626103203889" modified="20200626103203889" title="$:/state/folded/Signal experience">
+<pre>hide</pre>
+</div>
 <div created="20200504152619555" modified="20200504152620688" title="$:/state/folded/Stroll layout cheat sheet">
 <pre>show</pre>
 </div>
@@ -17440,6 +17468,15 @@ exports.context = contextWidget;
 <div created="20200626103143294" modified="20200626103143294" title="$:/state/toc/TableOfContents/Development/Formal language-Golang--118161433">
 <pre>open</pre>
 </div>
+<div created="20200626103456082" modified="20200626103456082" title="$:/state/toc/TableOfContents/Development/Formal language-Programming language--118161433">
+<pre>open</pre>
+</div>
+<div created="20200626103950075" modified="20200626103950075" title="$:/state/toc/TableOfContents/Development/Formal language-Regular expression--118161433">
+<pre>open</pre>
+</div>
+<div created="20200626103456783" modified="20200626103456783" title="$:/state/toc/TableOfContents/Development/Formal language/Programming language-Golang--118161433">
+<pre>open</pre>
+</div>
 <div created="20200625051717805" modified="20200625051849987" title="$:/state/toc/TableOfContents/Development/Network-Virtualization--118161433">
 <pre>open</pre>
 </div>
@@ -17494,7 +17531,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200626032954509" list="[[golang ci runner]] [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] Algorithm [[Formal language]] Golang Development PCRE Linux Bash PCB SIGPIPE [[Signal experience]] networks [[http server]] SIGSTOP Computing Backend [[graceful restart]] [[graceful shutdown]] [[calicao subnet not match the CIDR of a configured Calico IP Pool]] Virtualization TableOfContents" modified="20200626103146560" title="$:/StoryList">
+<div created="20200626032954509" list="[[Capturing group]] Golang [[Formal language]] [[Programming language]] [[Regular expression]] Bash" modified="20200626104429824" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/core/ui/Buttons/delete $:/.giffmex/Buttons/more-tiddler-edit-actions $:/_sq/Stories/divertTiddlerEditMacro $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200625045444250" tags="$:/giffmex/bigeditarea" title="$:/tags/EditToolbar">
@@ -17570,7 +17607,7 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200418122623650" modified="20200626033103711" title="$:/temp/NewTagName">
+<div created="20200418122623650" modified="20200626103830039" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200616152848736" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200616152848736" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -18535,8 +18572,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200616183644116" modified="20200616183644116" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200616161922967" modified="20200626033306687" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>graceful restart</pre>
+<div created="20200616161922967" modified="20200626104429093" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Capturing group</pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20200616183714956" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
 <pre>$:/themes/tiddlywiki/seamless</pre>
@@ -18680,14 +18717,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200623172059355" modified="20200623172106995" tags="Development" title="Backend" type="text/x-markdown">
 <pre></pre>
 </div>
-<div created="20200626101719670" modified="20200626101940122" tags="Linux" title="Bash" type="text/x-markdown">
+<div created="20200626101719670" modified="20200626104134625" tags="Linux" title="Bash" type="text/x-markdown">
 <pre>[[Linux]]
 
-## Regular Expression Assertions
+## [[Regular Expression]] Assertions
 
 
 
-Bash 不支持(...)	[[Capturing group]]，所以需要使用`Positive lookbehind`来去掉不需要的字符串
+Bash 不支持(...)	[[Capturing group]]，所以需要使用[[Positive lookbehind]]来去掉不需要的字符串
 
 如：
 
@@ -18737,8 +18774,14 @@ True
 <div created="20200622110429774" modified="20200622110429774" title="calico">
 <pre></pre>
 </div>
-<div created="20200626101940126" modified="20200626101940126" title="Capturing group">
-<pre></pre>
+<div created="20200626101940126" modified="20200626103947717" tags="[[Regular expression]]" title="Capturing group" type="text/x-markdown">
+<pre>### Syntax
+	(regex)
+
+&gt; Parentheses group the regex between them. They capture the text matched by the regex inside them into a numbered group that can be reused with a numbered backreference. They allow you to apply regex operators to the entire grouped regex.
+
+### example
+` (abc){3} matches abcabcabc. First group matches abc.`</pre>
 </div>
 <div created="20200617040925395" modified="20200617041105040" tags="network" title="CIDR" type="text/x-markdown">
 <pre>[[Note]]
@@ -18784,6 +18827,9 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 <div created="20200626102426078" modified="20200626102656314" tags="Development" title="Formal language">
 <pre>In mathematics, computer science, and linguistics, a formal language consists of words whose letters are taken from an alphabet and are well-formed according to a specific set of rules.</pre>
 </div>
+<div created="20200626103619996" modified="20200626103619996" title="formal language">
+<pre></pre>
+</div>
 <div created="20200617082304992" modified="20200626103138935" tags="linux Golang ci" title="goalng CI build 二进制/tmp/zero-redis: No such file or directory" type="text/x-markdown">
 <pre>[[Note]]
 
@@ -18810,7 +18856,7 @@ ls: cannot access '/lib/ld-musl-x86_64.so.1': No such file or directory
 
 &gt; [[musl]] is an implementation of the C standard library built on top of the Linux system call API, including interfaces defined in the base language standard, POSIX, and widely agreed-upon extensions. musl is lightweight, fast, simple, free, and strives to be correct in the sense of standards-conformance and safety.</pre>
 </div>
-<div created="20200616145626358" modified="20200626103138932" tags="[[Formal language]]" title="Golang">
+<div created="20200616145626358" modified="20200626103454298" tags="[[Programming language]]" title="Golang">
 <pre></pre>
 </div>
 <div created="20200626103155338" modified="20200626103155338" title="golang">
@@ -18976,6 +19022,20 @@ switch a, b:
 <div created="20200622162527707" modified="20200622162527707" title="Pitfalls">
 <pre></pre>
 </div>
+<div created="20200626104134628" modified="20200626104621670" tags="[[Regular expression]]" title="Positive lookbehind" type="text/x-markdown">
+<pre>
+`(?&lt;=regex)`
+	Matches at a position if the pattern inside the lookbehind can be matched ending at that position.	
+
+`(?&lt;=s)t` matches the first t in streets.	
+
+https://www.regular-expressions.info/refadv.html</pre>
+</div>
+<div created="20200626103404097" modified="20200626103443787" tags="[[Formal language]]" title="Programming language">
+<pre>A programming language is a [[Formal language]] comprising a set of instructions that produce various kinds of output.
+
+ Programming languages are used in computer programming to implement algorithms.</pre>
+</div>
 <div color="#f2f511" created="20200624163052265" modified="20200625045046908" tags="Quote TableOfContents" title="Quote" type="text/vnd.tiddlywiki">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
@@ -18985,6 +19045,23 @@ switch a, b:
 </pre>
 </div>
 <div created="20200619184650746" modified="20200619184650746" title="Reentrancy">
+<pre></pre>
+</div>
+<div created="20200626103619995" modified="20200626103619995" title="regex">
+<pre></pre>
+</div>
+<div created="20200626103213797" modified="20200626104413866" tags="[[Formal language]]" title="Regular expression">
+<pre>
+
+A regular expression (shortened as [[regex]] or regexp also referred to as rational expression) is a sequence of characters that define a search pattern.
+
+Usually such patterns are used by string searching algorithms for &quot;find&quot; or &quot;find and replace&quot; operations on strings, or for input validation.
+
+It is a technique developed in theoretical computer science and [[formal language]] theory.
+
+https://www.debuggex.com/cheatsheet/regex/pcre</pre>
+</div>
+<div created="20200626103639942" modified="20200626103639942" title="Regular Expression">
 <pre></pre>
 </div>
 <div created="20140114170004978" creator="Stephan Hradek" description="A great trick invented by Alberto Molina to search and replace tags." modified="20200521150920458" modifier="Stephan Hradek" title="RenameTags">
