--- a/wiki/index.html
+++ b/wiki/index.html
@@ -243,6 +243,8 @@ Error message and password prompt
 
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/savetrail</li>
 
+<li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/share</li>
+
 <li>$:/config/RelinkOnRename</li>
 
 <li>$:/config/TextEditor/EditorHeight/Mode</li>
@@ -452,6 +454,8 @@ Error message and password prompt
 <li>$:/state/plugin-info--896887961-$:/plugins/sq/Stories---1130285312</li>
 
 <li>$:/state/plugin-info-1634970942-$:/plugins/danielo515/autotag---1503439084</li>
+
+<li>$:/state/plugin-info-1666789406-$:/plugins/tiddlywiki/share--1086045815</li>
 
 <li>$:/state/plugin-info-334910430-$:/core---1812962263</li>
 
@@ -1040,7 +1044,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div bag="default" created="20170615140314952" list="" modified="20200625045559674" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
+<div bag="default" created="20170615140314952" list="" modified="20200626105226298" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
 <div created="20191010123116672" modified="20200521150809747" tags="$:/tags/Stylesheet $:/giffmex/stroll $:/giffmex/blinks" title="$:/.giffmex/.Stylesheet4Stroll" type="text/css">
@@ -1625,6 +1629,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <pre>yes</pre>
 </div>
 <div created="20200616155232956" modified="20200616155232956" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/savetrail">
+<pre>yes</pre>
+</div>
+<div created="20200626105324276" modified="20200626105324276" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/share">
 <pre>yes</pre>
 </div>
 <div bag="default" created="20200106214031452" modified="20200521150810088" revision="0" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/config/RelinkOnRename" type="text/vnd.tiddlywiki">
@@ -17421,6 +17428,9 @@ exports.context = contextWidget;
 <div created="20200625052044683" modified="20200625052104051" title="$:/state/plugin-info-1634970942-$:/plugins/danielo515/autotag---1503439084">
 <pre>contents</pre>
 </div>
+<div created="20200626105312090" modified="20200626105318108" title="$:/state/plugin-info-1666789406-$:/plugins/tiddlywiki/share--1086045815">
+<pre>readme</pre>
+</div>
 <div created="20200521150848494" modified="20200521150848494" title="$:/state/plugin-info-334910430-$:/core---1812962263">
 <pre>contents</pre>
 </div>
@@ -17605,12 +17615,12 @@ exports.context = contextWidget;
 <pre>no</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
-<pre>yes</pre>
+<pre>no</pre>
 </div>
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200626032954509" list="$:/ControlPanel [[Capturing group]] Golang [[Formal language]] [[Programming language]] [[Regular expression]] Bash" modified="20200626105008774" title="$:/StoryList">
+<div list="TableOfContents" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/core/ui/Buttons/delete $:/.giffmex/Buttons/more-tiddler-edit-actions $:/_sq/Stories/divertTiddlerEditMacro $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200625045444250" tags="$:/giffmex/bigeditarea" title="$:/tags/EditToolbar">
@@ -18645,14 +18655,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200626102456018" title="$:/temp/search">
-<pre>programming lang</pre>
+<div created="20200418122544376" modified="20200626105453739" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200616161922967" modified="20200626104429093" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Capturing group</pre>
+<div created="20200616161922967" modified="20200626105234616" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>SIGPIPE</pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20200616183714956" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
 <pre>$:/themes/tiddlywiki/seamless</pre>
@@ -19102,8 +19112,7 @@ switch a, b:
 <pre></pre>
 </div>
 <div created="20200626104134628" modified="20200626104621670" tags="[[Regular expression]]" title="Positive lookbehind" type="text/x-markdown">
-<pre>
-`(?&lt;=regex)`
+<pre>`(?&lt;=regex)`
 	Matches at a position if the pattern inside the lookbehind can be matched ending at that position.	
 
 `(?&lt;=s)t` matches the first t in streets.	
@@ -19130,9 +19139,7 @@ https://www.regular-expressions.info/refadv.html</pre>
 <pre></pre>
 </div>
 <div created="20200626103213797" modified="20200626104413866" tags="[[Formal language]]" title="Regular expression">
-<pre>
-
-A regular expression (shortened as [[regex]] or regexp also referred to as rational expression) is a sequence of characters that define a search pattern.
+<pre>A regular expression (shortened as [[regex]] or regexp also referred to as rational expression) is a sequence of characters that define a search pattern.
 
 Usually such patterns are used by string searching algorithms for &quot;find&quot; or &quot;find and replace&quot; operations on strings, or for input validation.
 
